--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,10 @@
         "symfony/var-dumper": "^4.0",
         "symfony/debug": "~2.7"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7.2",
+        "brain/monkey": "^2.2"
+    },
     "config": {
         "optimize-autoloader": true
     }
